add system scss loader

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   <script src="node_modules/systemjs/dist/system.js"></script>
   <script src="node_modules/rxjs/bundles/Rx.min.js"></script>
 
+  <script src="config.js"></script>
   <script src="app/systemjs.config.js"></script>
 
   <!-- 2. Configure SystemJS -->
   <script>
-    System.import('app/boot').then(null, console.error.bind(console));
+    System.import('app/boot').then(null, console.error.bind(console));x
   </script>
 </head>
 
