--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script src="config.js"></script>
   <script src="app/systemjs.config.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>-->
   <script src="injectcss.js"></script>
 
   <!-- 2. Configure SystemJS -->
