--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="node_modules/rxjs/bundles/Rx.min.js"></script>
 
   <script src="config.js"></script>
-  <script src="app/systemjs.config.js"></script>
+  <script src="systemjs.config.js"></script>
   <!--<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>-->
   <script src="injectcss.js"></script>
 
