--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/main.css?1466987770396">
+    <link rel="stylesheet" href="/assets/main.css">
     <!-- endinject -->
   </head>
   <body>
@@ -34,8 +34,8 @@
   <!-- endinject -->
 
   <!-- inject:js -->
-  <script src="/js/shims.js?1466987770394"></script>
-  <script src="/js/app.js?1466987770395"></script>
+  <script src="/js/shims.js"></script>
+  <script src="/js/app.js"></script>
   <!-- endinject -->
 
   
