--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- inject:css -->
-    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="/ng2-2048/assets/main.css">
     <!-- endinject -->
   </head>
   <body>
@@ -34,8 +34,8 @@
   <!-- endinject -->
 
   <!-- inject:js -->
-  <script type="text/javascript" src="/shims.js"></script>
-  <script type="text/javascript" src="/app.js"></script>
+  <script type="text/javascript" src="/ng2-2048/shims.js"></script>
+  <script type="text/javascript" src="/ng2-2048/app.js"></script>
   <!-- endinject -->
 
   
