--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
   <!-- libs:js -->
   <!-- endinject -->
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-79910058-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
   <!-- inject:js -->
   <script type="text/javascript" src="/ng2-2048/shims.js"></script>
   <script type="text/javascript" src="/ng2-2048/app.js"></script>
