--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- inject:css -->
-    <link rel="stylesheet" href="/ng2-2048/assets/main.css">
+    <link rel="stylesheet" href="/ng2-2048/assets/main.css?1467077964312">
     <!-- endinject -->
   </head>
   <body>
@@ -30,9 +30,7 @@
 
   
 
-  <!-- libs:js -->
-  <!-- endinject -->
-
+  
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -43,10 +41,14 @@
     ga('send', 'pageview');
 
   </script>
+  
+
+  <!-- libs:js -->
+  <!-- endinject -->
 
   <!-- inject:js -->
-  <script type="text/javascript" src="/ng2-2048/shims.js"></script>
-  <script type="text/javascript" src="/ng2-2048/app.js"></script>
+  <script src="/ng2-2048/js/shims.js?1467077964310"></script>
+  <script src="/ng2-2048/js/app.js?1467077964311"></script>
   <!-- endinject -->
 
   
